# tiders

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docker_clickhouse/: .env.example  docker-compose.yml
docker_postgres/: .env.example  docker-compose.yaml
examples/: erc20_custom.py  erc20_rpc.py  jup_swap.py  last_blocks_rpc.py  last_blocks_traces_rpc.py  rpc_pipeline.py  uniswap_v3.py
examples/erc20_custom_nocode/: .env.example  erc20_custom_nocode.yaml
examples/first_pipeline/: .env.example  erc20_pipeline.yaml  erc20_transfers.py
examples/jup_swap/: jup_swap.py  solana_amm.csv  solana_tokens.csv
examples/polymarket_vol/: .env.example  polymarket_CTFExchange.abi.json  polymarket_CTFExchange.yaml  polymarket_NegRiskCtfExchange.abi.json  polymarket_NegRiskCtfExchange.yaml  polymarket_ctfexchange.py  polymarket_neg_risk_ctf_exchange.py  polymarket_vol_transformation.py  readme.md
examples/reth_transfer_nocode/: .env.example  reth_transfer_nocode.yaml
examples/uniswap_v3/: .env.example  uniswap_v3.py
src/tiders/: __init__.py  config.py  core.py  pipeline.py  utils.py
src/tiders/cli/: abi_fetching.py  codegen.py  env.py  main.py  tiders_yaml_parser.py
src/tiders/steps/: __init__.py  add_columns.py  base58_encode.py  cast.py  cast_by_type.py  copy_columns.py  datafusion_step.py  delete_columns.py  delete_tables.py  drop_empty_tables.py  evm_decode_events.py  hex_encode.py  join_block_data.py  join_evm_transaction_data.py  join_svm_transaction_data.py  large_int_columns_to_binary.py  pandas_step.py  polars_step.py  prefix_columns.py  prefix_tables.py  rename_columns.py  rename_tables.py  reorder_columns.py  select_columns.py  select_tables.py  set_chain_id.py  suffix_columns.py  suffix_tables.py  svm_decode_instructions.py  svm_decode_logs.py  u256_to_binary.py  util.py
src/tiders/writers/: __init__.py  base.py  clickhouse.py  csv.py  delta_lake.py  duckdb.py  iceberg.py  postgresql.py  pyarrow_dataset.py  writer.py
src/tiders_etl/: pipeline.py  utils.py
src/tiders_etl/steps/: __init__.py  base58_encode.py  cast.py  datafusion_step.py  evm_decode_events.py  hex_encode.py  polars_step.py  (+3 more)
tests/: test_cli_env.py  test_steps.py  test_yaml_parser.py
(+4 files in other folders)
