[project]
name = "tiders"
version = "0.1.0"
description = "Library for building blockchain pipelines"
repository = "https://github.com/yulesa/tiders"
homepage = "https://github.com/yulesa/tiders"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  { name = "Ozgur Akkurt", email = "ozgur@steelcake.com" },
  { name = "Yule Andrade", email = "yulesa@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "tiders-core",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.38",
    "psycopg2-binary>=2.9.0",
    "pyiceberg>=0.10.0",
    "clickhouse-connect>=0.9.2",
    "deltalake>=1.2.1",
    "polars>=1.34.0",
    "duckdb>=1.4.1",
    "datafusion>=50.1.0",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
    "ruff>=0.9.7",
    "base58>=2.1.1",
    "pyright>=1.1.400",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

