[project]
name = "tiders"
version = "0.1.3"
description = "Library for building blockchain pipelines"
repository = "https://github.com/yulesa/tiders"
homepage = "https://github.com/yulesa/tiders"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  { name = "Yule Andrade", email = "yulesa@gmail.com" },
  { name = "Ozgur Akkurt", email = "ozgur@steelcake.com" },
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "tiders-core>=0.1.3",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
duckdb = ["duckdb>=1.4.1"]
clickhouse = ["clickhouse-connect>=0.9.2"]
delta_lake = ["deltalake>=1.2.1"]
iceberg = ["pyiceberg>=0.10.0"]
polars = ["polars>=1.34.0"]
pandas = ["pandas>=2.0.0"]
datafusion = ["datafusion>=50.1.0"]
postgresql = ["psycopg[binary]>=3.1.0; python_version < '3.14'"]
all = ["tiders[duckdb,clickhouse,delta_lake,iceberg,polars,pandas,datafusion,postgresql]"]

[project.scripts]
tiders = "tiders.cli.main:main"

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.3.5",
    "ruff>=0.9.7",
    "base58>=2.1.1",
    "pyright>=1.1.400",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

